force-app/main/default/objects/ComplianceCheck__c/ComplianceCheck__c.object-meta.xml
<CustomObject>
    <description>Statutory compliance inspection record for a Network Rail station.</description>
    <label>Compliance Check</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Compliance Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>