force-app/main/default/objects/ComplianceCheck__c/fields/CheckDate__c.field-meta.xml
<CustomField>
    <fullName>CheckDate__c</fullName>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>