force-app/main/default/objects/ComplianceCheck__c/fields/NextDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextDueDate__c</fullName>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>