force-app/main/default/objects/ComplianceCheck__c/fields/OutstandingActions__c.field-meta.xml
<CustomField>
    <fullName>OutstandingActions__c</fullName>
    <label>Outstanding Actions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>