force-app/main/default/objects/ComplianceCheck__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
            <value><fullName>Pass with Actions</fullName><default>false</default><label>Pass with Actions</label></value>
            <value><fullName>Fail</fullName><default>false</default><label>Fail</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>