force-app/main/default/objects/ComplianceCheck__c/listViews/All_Compliance_Checks.listView-meta.xml
<ListView>
    <fullName>All_Compliance_Checks</fullName>
    <filterScope>Everything</filterScope>
    <label>All Compliance Checks</label>
    <columns>NAME</columns>
    <columns>Station__c</columns>
    <columns>CheckType__c</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <columns>NextDueDate__c</columns>
    <columns>OutstandingActions__c</columns>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>